adding a <br> tag

--- a/para.html
+++ b/para.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <p>this is my paragraph.</p>
-    
+    <p>br tag is a line break element </p><br><br>
+    <p>the br tag is an empty tag. which means that it has no end tag .</p>
 </body>
 </html>
