adding a <pre></pre> element

--- a/para.html
+++ b/para.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <p>this is my paragraph.</p>
-    <p>br tag is a line break element </p><br><br>
+    <p><br> br tag is a line break element </p>
     <p>the br tag is an empty tag. which means that it has no end tag .</p>
+    <p><pre></pre> pre element defines performatted text.it preserves both spaces and line breaks</p>
 </body>
 </html>
